--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -476,6 +476,16 @@
       }
     }
   }
+
+  @media screen and (max-width: 391px) {
+    .item{
+      .detail{
+        width: 400px;
+        
+      }
+    }
+  }
+
 }
 
 #latest {
