--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -112,7 +112,9 @@ header {
           position: relative;
           right: 9px;
           bottom: 10px;
+       
         }
+     
         .box {
           height: 100vh;
           width: 0px;
@@ -299,10 +301,18 @@ header {
             margin-bottom: 10px;
           }
         }
+
+       
       }
       .user_mobile_registration.active {
         visibility: visible;
         opacity: 1;
+        @media  screen and (max-width:391px) {
+          &{
+            top: 85%;
+            
+           }
+         }
       }
       .count {
         color: white;
@@ -315,6 +325,21 @@ header {
         position: relative;
         right: -1px;
         bottom: 29px;
+        @media screen and (max-width: 821px) {
+          &{
+           font-size: 12px;
+           right: 25px;
+           bottom: 5px;
+           width: 12px;
+           height: 12px;
+          }
+         }
+         @media  screen and (max-width:391px) {
+          &{
+            right: 0px;
+            bottom: 30px;
+           }
+         }
       }
       .box {
         height: 100vh;
