--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 header {
   position: absolute;
   width: 100%;
@@ -8149,4 +8150,39 @@ footer .secondFooter .box .text-img p a {
   font-size: 14px;
   font-weight: 400;
   color: gray;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .input_title .star {
+  font-size: 14px;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .input_title .star::before {
+  content: " ✱";
+  display: inline;
+  color: red;
+  font-size: 10px;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .form-control {
+  box-shadow: none;
+  border-radius: 0;
+  margin: 0 0 5px;
+  border-color: #e9e9e9;
+  transition: 0.5s all;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .form-control:focus {
+  box-shadow: none;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .label {
+  margin-right: 10px;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .inputs .label::before {
+  content: " ✱";
+  display: inline;
+  color: red;
+  font-size: 10px;
+}
+#htc .devices_drone .accordions .htc_ctgr .htc_info .buttons {
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 30px;
 }/*# sourceMappingURL=main.css.map */
