--- a/assets/scss/_htcTouch.scss
+++ b/assets/scss/_htcTouch.scss
@@ -172,4 +172,181 @@
       }
     }
   }
+  .details {
+    position: sticky;
+    top: 0;
+    right: 0;
+    background-color: white;
+    .title {
+      border-bottom: solid 0.5px rgb(230, 230, 230);
+      padding-bottom: 10px;
+      margin-bottom: 20px;
+      h1 {
+        font-size: 30px;
+        font-weight: 500;
+      }
+    }
+    .social_network {
+      display: flex;
+      align-items: center;
+      .facebook {
+        button {
+          border: none;
+          color: white;
+          border: none;
+          background: #1877f2;
+          border-radius: 3px;
+          font-size: 11px;
+          height: 20px;
+          padding: 0px 5px;
+          font-weight: 500;
+        }
+      }
+      .twit_share {
+        height: max-content;
+        display: flex;
+        .twitter {
+          padding-left: 10px;
+          padding-right: 10px;
+          background-color: #1d9bf0;
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+          margin-left: 20px;
+          border: none;
+          i {
+            color: white;
+            font-size: 12px;
+          }
+          span {
+            font-size: 14px;
+            color: white;
+          }
+        }
+        .share {
+          background-color: #fe6d4c;
+          margin-right: 15px;
+          border-radius: 0px;
+          padding: 0 5px;
+          border-radius: 3px;
+          position: relative;
+          left: -2px;
+          border: none;
+          i {
+            color: white;
+            font-size: 12px;
+          }
+          span {
+            font-size: 14px;
+            color: white;
+          }
+        }
+      }
+    }
+    .rating {
+      display: flex;
+      align-items: center;
+      padding: 20px 0;
+      .rate {
+        i {
+          font-size: 13px;
+        }
+      }
+      .review {
+        font-size: 14px;
+        color: #888;
+        margin-left: 15px;
+        i {
+          font-size: 13px;
+        }
+      }
+    }
+    .price {
+      padding: 20px 0 20px;
+      border-bottom: solid 0.5px rgb(230, 230, 230);
+      h4 {
+        margin-bottom: 8px;
+        font-size: 22px;
+        font-weight: 500;
+        color: #232323;
+      }
+      span {
+        font-size: 13px;
+        line-height: 24px;
+        font-weight: 500;
+        color: #232323;
+      }
+    }
+    .add-cart {
+      padding: 10px 0;
+      border-bottom: solid 0.5px rgb(230, 230, 230);
+      border-top: solid 0.5px rgb(230, 230, 230);
+      input {
+        width: 70px;
+        border-radius: 0px;
+        border: solid 0.5px rgb(230, 230, 230);
+        outline: none;
+        padding-left: 10px;
+        margin-left: 6px;
+      }
+      .add {
+        border: none;
+        height: 36px;
+        font-size: 14px;
+        padding: 0 15px;
+        color: white;
+        background-color: #232323;
+        transition: 0.5s;
+
+        cursor: pointer;
+        &:hover {
+          background-color: #eb4d4b;
+        }
+      }
+    }
+    .some_button {
+      margin-left: 10px;
+      border: none;
+      height: 36px;
+      width: 36px;
+      background-color: #eb4d4b;
+      transition: 0.5s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i {
+        color: white;
+      }
+      &:hover {
+        background-color: #232323;
+      }
+    }
+    .twoUl {
+        display: flex;
+        margin-top: 30px;
+      .last_ul {
+        margin-left: 20px;
+        margin-bottom: 20px;
+        display: block;
+        overflow: hidden;
+        text-align: center;
+        li {
+        
+            width: 100%;
+          line-height: 35px;
+          padding: 5px 5px 0;
+          float: left;
+          border: 1px solid #eee;
+          margin-right: 15px;
+          color: #666;
+          margin-bottom: 15px;
+            p{
+                background-color: #f6f4f4;
+                margin: 0;
+                padding: 0;
+            }
+         
+        }
+      }
+    }
+  }
 }
